added new gestures: image to tab, link to tab, search text selection (only google for the moment); performance improvement for gesture drawing; fixed wrong gesture behaviour for iframes

--- a/src/ui/css/options.css
+++ b/src/ui/css/options.css
@@ -186,8 +186,8 @@ a:hover, a:focus {
   margin-bottom: 20px;
 }
 
-.optionList > li > * {
-  align-self: center;
+.optionList > li > *:first-child {
+  padding-right: 25px;
 }
 
 .optionList > li.noMargin {
