added new actions: close right tabs, close left tabs, close other tabs, save as pdf, print, show print preview; added extras menu button; changed config structure

--- a/src/ui/css/options.css
+++ b/src/ui/css/options.css
@@ -130,15 +130,12 @@ a:hover, a:focus {
   width: 660px;
 }
 
-#Settings, #About, #Gestures {
+#Content > div {
   display: none;
-}
-
-#Settings, #About, #Gestures {
   padding: 30px;
 }
 
-#Settings:target, #About:target, #Gestures:target {
+#Content > div:target {
   display: block;
 }
 
