added new action: Open link added option to query search in background tab added fallback fonts

--- a/src/ui/css/options.css
+++ b/src/ui/css/options.css
@@ -17,7 +17,7 @@
   padding: 0;
   border: none;
   outline: none;
-  font-family: Orkney Regular;
+  font-family: "Orkney Regular", "Arial", sans-serif;
   font-size: 16px;
   color: #666666;
 }
