minor popup style change

--- a/src/lib/css/popup.css
+++ b/src/lib/css/popup.css
@@ -32,7 +32,7 @@ html {
 }
 
 .item:hover {
-  background-color: #4682B4;
+  background-color: #2F7DC5;
   color: #FFF;
 }
 
@@ -58,6 +58,7 @@ html {
   line-height: 1rem;
   text-align: center;
   background: #f1f1f1;
+  color: #333;
 }
 
 .button.up {
