--- a/src/ui/css/modules/command-bar.css
+++ b/src/ui/css/modules/command-bar.css
@@ -146,7 +146,7 @@
 .cb-command-info-icon {
   background: none;
   color: #DDD;
-  cursor: default;t
+  cursor: default;
   transition: color 0.2s;
   font-family: Icons;
 }
@@ -198,7 +198,7 @@
 /* container footer */
 
 .cb-footer {
-  padding: 20px 20px;
+  padding: 20px 30px;
 }
 
 .cb-submit-button {
