--- a/src/ui/css/layout.css
+++ b/src/ui/css/layout.css
@@ -26,12 +26,12 @@
   outline: none;
   font-family: "Orkney Regular", "Arial", sans-serif;
   font-size: 16px;
-  color: #555555;
+  color: var(--base-invert-bright-color);
 }
 
 a {
   cursor: pointer;
-  color: #00AAA0;
+  color: var(--highlighted-color);
   text-decoration: none;
 }
 
@@ -100,7 +100,7 @@ a:hover, a:focus {
 
 .explanation {
   padding: 5px 0 20px 0;
-  border-bottom: 1px solid #EAEAEA;
+  border-bottom: 1px solid var(--sectionLine-color);
   margin-bottom: 20px;
   text-align: justify;
 }
@@ -118,7 +118,7 @@ a:hover, a:focus {
 .ol-section:not(:last-child):after {
   content: "";
   display: block;
-  border-bottom: 1px solid #EAEAEA;
+  border-bottom: 1px solid var(--sectionLine-color);
   margin: 20px 0;
 }
 
@@ -148,7 +148,7 @@ a:hover, a:focus {
   left: 0;
   width: 100%;
   height: 50px;
-  background: linear-gradient(to bottom, transparent 0%, #FBFBFB 100%);
+  background: linear-gradient(to bottom, transparent 0%, var(--base-bright-color) 100%);
   visibility: hidden;
   opacity: 0;
   transition: visibility 0.3s, opacity 0.3s;
@@ -184,12 +184,12 @@ a:hover, a:focus {
 .ol-description {
   transition: color 0.3s;
   font-size: 14px;
-  color: #BBBBBB;
+  opacity: 0.5;
 }
 
 .ol-item:hover .ol-description {
-  transition: color 0.3s;
-  color: #555555;
+  transition: opacity 0.3s;
+  opacity: 1;
 }
 
 /**
@@ -204,9 +204,9 @@ a:hover, a:focus {
   padding: 8px 0 6px 0;
   text-align: center;
   width: 45px;
-  background: #FFF;
+  background: var(--base-color);
   border-radius: 3px;
-  border: 1px solid #DDDDDD;
+  border: 1px solid var(--border-color);
   transition: background 0.5s;
   cursor: pointer;
 }
@@ -221,17 +221,17 @@ a:hover, a:focus {
 
 .toggle-button:checked + label {
   transition: background 0.5s;
-  background:#00AAA0;
-  border-color: #00AAA0;
-  color: #FFFFFF;
+  background: var(--highlighted-color);
+  border-color: var(--highlighted-color);
+  color: var(--base-color);
   font-weight: bold;
 }
 
 .toggle-button[disabled] + label {
-  color: #EAEAEA;
-  border-color: #EAEAEA;
+  color: var(--sectionLine-color);
+  border-color: var(--sectionLine-color);
   transition: color 0.3s;
-  background: #FFF;
+  background: var(--base-color);
   cursor: not-allowed;
 }
 
@@ -243,8 +243,8 @@ a:hover, a:focus {
   border-radius: 2px;
   padding: 5px;
   width: 140px;
-  background: #FFF;
-  border: 1px solid #DDDDDD;
+  background: var(--base-color);
+  border: 1px solid var(--border-color);
   box-sizing: border-box;
   text-align: center;
   transition: color 0.3s;
@@ -253,16 +253,16 @@ a:hover, a:focus {
 }
 
 .input-field[disabled] {
-  color: #EAEAEA;
-  border-color: #EAEAEA;
+  color: var(--sectionLine-color);
+  border-color: var(--sectionLine-color);
   transition: color 0.3s;
   cursor: not-allowed;
 }
 
 .input-field:invalid {
   box-shadow: none;
-  color: #FF6347;
-  border-color: #FF6347;
+  color: var(--warning-color);
+  border-color: var(--warning-color);
 }
 
 /**
@@ -274,9 +274,9 @@ a:hover, a:focus {
   width: 47px;
   padding: 5px;
   text-align: center;
-  background: #FFF;
+  background: var(--base-color);
   border-radius: 3px;
-  border: 1px solid #DDDDDD;
+  border: 1px solid var(--border-color);
   transition: background 0.5s;
   cursor: pointer;
 }
@@ -288,13 +288,13 @@ a:hover, a:focus {
 .select-field {
   width: 140px;
   padding: 4px 25px 4px 5px;
-  border: 1px solid #DDDDDD;
+  border: 1px solid var(--border-color);
   box-sizing: border-box;
   -moz-appearance: none;
   appearance: none;
   text-align: center;
   border-radius: 2px;
-  background-color: #FFF;
+  background-color: var(--base-color);
   background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" viewBox="0 0 345 210" xmlns:xlink="http://www.w3.org/1999/xlink"><polyline fill="none" stroke="%23555555" stroke-width="75" stroke-linecap="round" stroke-linejoin="round" points="38,38 172,172 307,38 "/></svg>');
   background-position: right 7px center;
   background-repeat: no-repeat;
@@ -309,9 +309,9 @@ a:hover, a:focus {
   padding: 8px 6px 6px 6px;
   text-align: center;
   min-width: 142px;
-  background: #FFF;
+  background: var(--base-color);
   border-radius: 3px;
-  border: 1px solid #DDDDDD;
+  border: 1px solid var(--border-color);
   cursor: pointer;
 }
 
@@ -320,13 +320,13 @@ a:hover, a:focus {
 }
 
 .button:hover, .button:hover * {
-  color:#00AAA0;
-  border-color: #00AAA0;
+  color: var(--highlighted-color);
+  border-color: var(--highlighted-color);
 }
 
 .button.danger:hover *, .button.danger:hover{
-  color:#FF6347;
-  border-color: #FF6347;
+  color: var(--warning-color);
+  border-color: var(--warning-color);
 }
 
 ::-moz-focus-inner {
@@ -343,7 +343,7 @@ a:hover, a:focus {
 
 .collapseButton + label {
   cursor: pointer;
-  color: #00AAA0;
+  color: var(--highlighted-color);
 }
 
 .collapseButton + label:after {
@@ -371,11 +371,11 @@ a:hover, a:focus {
   position: relative;
   width: 140px;
   padding: 5px 28px 5px 10px;
-  border: 1px solid #DDDDDD;
+  border: 1px solid var(--border-color);
   box-sizing: border-box;
   text-align: center;
   border-radius: 2px;
-  background-color: #FFF;
+  background-color: var(--base-color);
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -396,7 +396,7 @@ a:hover, a:focus {
 }
 
 .command-select-field:hover:after {
-  color: #00AAA0;
+  color: var(--highlighted-color);
 }
 
 .pop-out-animation {
@@ -421,11 +421,11 @@ a:hover, a:focus {
 }
 
 u {
-  color: #00AAA0;
+  color: var(--highlighted-color);
 }
 
 hr {
-  border-bottom: 1px solid #EAEAEA;
+  border-bottom: 1px solid var(--sectionLine-color);
   margin: 20px 0;
 }
 
@@ -439,7 +439,7 @@ hr {
 
 .sequence > li:not(:last-child):after {
   content: "\25CF";
-  color: #DDDDDD;
+  color: var(--border-color);
   padding: 0 10px;
 }
 
@@ -480,7 +480,7 @@ hr {
 }
 
 .gestureInput > input:invalid {
-  background: #FF6347;
+  background: var(--warning-color);
   box-shadow: none;
 }
 
@@ -503,8 +503,8 @@ hr {
   border-radius: 2px;
   list-style: none;
   flex-direction: column;
-  border: solid 1px #DDD;
-  background-color: #FFF;
+  border: solid 1px var(--border-color);
+  background-color: var(--base-color);
   box-shadow: none;
   transition: box-shadow 0.3s;
   min-width: 0;
@@ -512,12 +512,12 @@ hr {
 }
 
 .gl-item:hover {
-  box-shadow: 0 1px 2px #DDD;
+  box-shadow: 0 1px 2px var(--border-color);
 }
 
 .gl-action {
   padding: 15px 20px 7px 20px;
-  border-bottom: solid 1px #DDD;
+  border-bottom: solid 1px var(--border-color);
 }
 
 .gl-gesture {
@@ -536,7 +536,7 @@ hr {
   padding: 5px 5px;
   margin: 5px 5px;
   transition: opacity 0.3s;
-  background-color: #FFF;
+  background-color: var(--base-color);
   visibility: hidden;
   opacity: 0;
   cursor: pointer;
@@ -580,40 +580,40 @@ hr {
 }
 
 .bl-add-button {
-  background: #FFF;
+  background: var(--base-color);
   text-align: center;
   padding: 8px 25px 6px;
   min-width: 0;
-  border: 1px solid #DDD;
+  border: 1px solid var(--border-color);
   border-radius: 0 3px 3px 0;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s, border-color 0.3s;
 }
 
 .bl-add-button:hover {
-  background: #00AAA0;
-  color: #FFF;
-  border-color: #00AAA0;
+  background: var(--highlighted-color);
+  color: var(--base-color);
+  border-color: var(--highlighted-color);
 }
 
 .bl-error {
   display: block;
   min-height: 40px;
-  color: #FF4500;
+  color: var(--warning-color);
 }
 
 .blacklist {
   width: 100%;
   padding-top: 20px;
-  border-top: 1px solid #EAEAEA;
+  border-top: 1px solid var(--sectionLine-color);
 }
 
 .bl-entry {
   display: flex;
   box-sizing: border-box;
   margin-bottom: 10px;
-  background: #FFF;
-  border: 1px solid #dddddd;
+  background: var(--base-color);
+  border: 1px solid var(--border-color);
   border-radius: 2px;
   animation-duration: .3s;
   animation-timing-function: ease;
@@ -621,7 +621,7 @@ hr {
 }
 
 .bl-entry:hover {
-  box-shadow: 0 1px 2px #DDD;
+  box-shadow: 0 1px 2px var(--border-color);
 }
 
 .bl-entry-animate {
@@ -663,4 +663,50 @@ hr {
   padding: 5px;
   cursor: pointer;
   background: inherit;
+}
+
+.themes {
+  display: flex;
+  width: 170px;
+  margin-bottom: 30px;
+  flex-wrap: wrap;
+}
+
+.theme-checkbox {
+  display: none;
+}
+
+.theme-checkbox:checked ~ .theme-values{
+  display: flex;
+}
+
+.theme-value {
+  flex: 1;
+  order: 2;
+  -moz-appearance: none;
+  -moz-user-select: none;
+  cursor: default;
+}
+
+.theme-checkbox:checked + .theme-value{
+  color: var(--highlighted-color);
+  border-color: var(--highlighted-color);
+}
+
+.theme-values {
+  display: none;
+  flex-direction: column;
+  order: 1;
+  flex: 1;
+  border: 1px solid var(--border-color);
+  border-radius: 2px;
+}
+
+.theme-values > span {
+  padding: 8px 6px 6px 6px;
+  cursor: default;
+}
+
+.theme-values > span:hover {
+  background: #00AAA0;
 }
