--- a/src/ui/css/modules/gesture.css
+++ b/src/ui/css/modules/gesture.css
@@ -1,4 +1,16 @@
-
+:root {
+  --base-color: #FFF;
+  --base-bright-color: #FBFBFB;
+  --base-brighter-color: #fafafc;
+  --base-invert-color: #000;
+  --base-invert-bright-color: #555555;
+  --sectionLine-color: #EAEAEA;
+  --border-color: #ddd;
+  --shadow-color: #888;
+  --highlighted-color: #00AAA0;
+  --highlighted-dark-color: #00726b;
+  --warning-color: #FF6347;
+}
 
 /**
  *
@@ -15,8 +27,8 @@
   width: 800px;
   height: 600px;
   padding: 20px;
-  background: #F9F9FA;
-  box-shadow: 0px 0px 8px 2px #888;
+  background: var(--base-color);
+  box-shadow: 0px 0px 8px 2px var(--shadow-color);
 }
 
 .gesture-popup.gp-animation-init {
@@ -46,7 +58,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  background: #fafbfc;
+  background: var(--base-brighter-color);
   margin-top: 20px;
 }
 
@@ -57,8 +69,8 @@
   box-sizing: border-box;
   border-top-left-radius: 2px;
   border-bottom-left-radius: 2px;
-  border: solid 1px #DDD;
-  background: #fff;
+  border: solid 1px var(--border-color);
+  background: var(--base-color);
 }
 
 .gp-action-label-input::placeholder {
@@ -74,7 +86,7 @@
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
   background: #F9F9FA;
-  border: solid 1px #DDD;
+  border: solid 1px var(--border-color);
   border-left: none;
   text-transform: uppercase;
 letter-spacing: 2px;
@@ -83,9 +95,9 @@ letter-spacing: 2px;
 
 .gp-save-button {
   padding: 8px 20px 5px 20px;
-  background: #00AAA0;
-  border: 1px solid #00AAA0;
-  color: #FFFFFF;
+  background: var(--highlighted-color);
+  border: 1px solid var(--highlighted-color);
+  color: var(--base-color);
   margin-left: 20px;
   cursor: pointer;
   height: 100%;
@@ -97,12 +109,12 @@ letter-spacing: 2px;
 
 .gp-draw-area {
   height: 100%;
-  border: dashed 1px #DDD;
-  background: #fff;
+  border: dashed 1px var(--border-color);
+  background: var(--base-color);
 }
 
 .gp-save-button:hover {
-  border: 1px solid #00726b;
+  border: 1px solid var(--highlighted-dark-color);
 }
 
 
@@ -111,7 +123,7 @@ letter-spacing: 2px;
   height: 100%;
   padding: 8px 20px 0 20px;
   box-sizing: border-box;
-  border: solid 1px #DDD;
+  border: solid 1px var(--border-color);
   border-radius: 2px;
-  background: #fff;
+  background: var(--base-color);
 }
