--- a/src/ui/css/modules/gesture.css
+++ b/src/ui/css/modules/gesture.css
@@ -21,7 +21,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   display: flex;
   flex-direction: column;
   width: 800px;
@@ -31,15 +31,20 @@
   box-shadow: 0px 0px 8px 2px var(--shadow-color);
 }
 
-.gesture-popup.gp-animation-init {
-  top: 0;
-  left: 0;
-  transform-origin: 0 0 0;
+.gesture-popup.gp-show {
+  animation: gesturePopupShow 0.3s;
 }
 
-.gesture-popup.gp-animation-run {
-  transition: transform 0.3s, opacity 0.3s ;
-  transition-delay: 0s, 0.2s;
+.gesture-popup.gp-hide {
+  transform: translate(-50%, -50%) scale(0.6);
+  opacity: 0;
+  transition: transform 0.3s, opacity 0.3s;
+}
+
+@keyframes gesturePopupShow {
+  from {opacity: 0; transform: translate(-50%, -50%) scale(0.5);}
+  50% {transform: translate(-50%, -50%) scale(1.05)}
+  to {opacity: 1; transform: translate(-50%, -50%) scale(1);}
 }
 
 .gp-header {
