--- a/src/ui/css/themes/white.css
+++ b/src/ui/css/themes/white.css
@@ -1,7 +1,7 @@
 :root {
-  --base-color: #2a2a2a !important;
-  --base-bright-color: #1a1a1a !important;
-  --base-brighter-color: #1a1a1a !important;
+  --base-color: orange !important;
+  --base-bright-color: orange !important;
+  --base-brighter-color: orange !important;
   --base-invert-color: #DADADA !important;
   --base-invert-bright-color: #EBEBEB !important;
   --sectionLine-color: #404040 !important;
